<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#99000000"
                android:gravity="center">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:elevation="0dp"
            android:layout_margin="@dimen/dp_eight"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_thirty_two"
                custom:cardCornerRadius="@dimen/dp_eight"
        >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_tweleve"
                    android:gravity="center"
                    android:orientation="vertical"
            >
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewAlert"
                            android:text="@string/alert"
                            android:textColor="@android:color/black"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="@dimen/sp_eighteen"/>
                </RelativeLayout>


                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewMessage"
                        android:layout_marginTop="@dimen/dp_fourty"
                        android:text="@string/please_turn_on_nfc_setting_to_scan_nfc_tag"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="@dimen/sp_fourteen"/>

                <Button
                        android:layout_width="@dimen/dp_two_hundered"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonOk"
                        android:text="@string/ok"
                        android:layout_marginBottom="@dimen/dp_sixteen"
                        android:padding="@dimen/dp_eight"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/dp_thirty_two"
                        android:background="@drawable/selector_bg_white_stroke_black_eight_dp_all"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/sp_sixteen"
                        android:textAllCaps="true"
                />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</RelativeLayout>