<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#99000000"
                android:gravity="center">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:elevation="0dp"
            android:layout_margin="@dimen/dp_eight"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:cardCornerRadius="@dimen/dp_eight"
        >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_tweleve"
                    android:gravity="center"
                    android:orientation="vertical"
            >
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewForgotPinDialog"
                            android:text="@string/login_access_to"
                            android:textColor="@android:color/black"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="@dimen/sp_eighteen"/>

                    <ImageView
                            android:layout_width="@dimen/dp_twenty_four"
                            android:layout_height="@dimen/dp_twenty_four"
                            android:id="@+id/imageViewCross"
                            android:src="@drawable/ic_close_popup"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"/>

                </RelativeLayout>


                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextEmail"
                        android:layout_marginTop="@dimen/dp_fourty"
                        android:background="@drawable/bottom_line_light_gray_drawable"
                        android:layout_marginLeft="@dimen/dp_sixty"
                        android:hint="@string/enter_registered_email"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:paddingBottom="@dimen/dp_eight"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/sp_fourteen"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginRight="@dimen/dp_sixty"
                />


                <Button
                        android:layout_width="@dimen/dp_two_hundered"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonSubmit"
                        android:text="@string/submit"
                        android:layout_marginBottom="@dimen/dp_four"
                        android:padding="@dimen/dp_eight"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/dp_thirty_two"
                        android:background="@drawable/selector_bg_black_eight_dp_round"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_sixteen"
                        android:textAllCaps="true"
                />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</RelativeLayout>